feat: add reflection tests