@@ -6,43 +6,68 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
 
 public class FlompilerTest {
 
-    private void testSuccess(String inputFilePath) {
+    /**
+     * Prepares the compilation of the given file.
+     * @param inputFilePath the path to the .java file
+     * @return an executable which attempts to compile the file
+     */
+    private Executable createCompilationExecutable(String inputFilePath) {
         final var inputPath = TestConstants.RESOURCES_ROOT + inputFilePath;
         final String[] args = { inputPath };
-        final Executable executable = () -> Flompiler.main(args);
-        Assertions.assertDoesNotThrow(executable);
+        return () -> Flompiler.main(args);
     }
 
-    private void testFailure(String inputFilePath) {
-        final var inputPath = TestConstants.RESOURCES_ROOT + inputFilePath;
-        final String[] args = { inputPath };
-        final Executable executable = () -> Flompiler.main(args);
-        Assertions.assertThrows(Exception.class, executable);
+    /**
+     * Tries to compile the given file.
+     * If successful, the compilation produces a `.class` file next to the given `.java` file.
+     * @param inputFilePath the path to the .java file
+     */
+    private void testParsingSuccess(String inputFilePath) {
+        Assertions.assertDoesNotThrow(createCompilationExecutable(inputFilePath));
     }
 
+    /**
+     * Tries to compile the given file and expects the compilation to fail.
+     * @param inputFilePath the path to the `.java` file
+     */
+    private void testParsingFailure(String inputFilePath) {
+        Assertions.assertThrows(Exception.class, createCompilationExecutable(inputFilePath));
+    }
 
-
-    public void testFlompilerReflection() {
+    /**
+     * Creates an instance of the given class.
+     * @param inputFileFolder the folder in which the class' class file lays
+     * @param inputClassName the name of the class (not the class file!)
+     * @return an instance of the class
+     */
+    public Object getReflectionInstance(String inputFileFolder, String inputClassName) {
         try {
-            File myFolder = new File(TestConstants.RESOURCES_ROOT + "/basic/EmptyClass.java");
-            URLClassLoader classLoader = null;
-            classLoader = new URLClassLoader(new URL[]{myFolder.toURI().toURL()}, Thread.currentThread().getContextClassLoader());
-            Class<?> myClass = Class.forName("my.package.Myclass", true, classLoader);
-            Object obj =  myClass.newInstance();
+            File inputFolder = new File( TestConstants.RESOURCES_ROOT + inputFileFolder);
+            URLClassLoader classLoader = new URLClassLoader(
+                    new URL[]{ inputFolder.toURI().toURL() },
+                    Thread.currentThread().getContextClassLoader()
+            );
+            Class<?> clazz = Class.forName(inputClassName, true, classLoader);
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("The folder path is malformed.", e);
         } catch (ClassNotFoundException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("There is no class with name " + inputClassName + ".", e);
         } catch (InstantiationException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("The given class cannot be instanced (is abstract).", e);
         } catch (IllegalAccessException e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("The given class cannot be instanced (constructor is not public).", e);
+        } catch (NoSuchMethodException e) {
+            throw new RuntimeException("The given class cannot be instanced (no matching constructor).", e);
+        } catch (InvocationTargetException e) {
+            throw new RuntimeException("The given class cannot be instanced (its constructor threw an exception).", e);
         }
     }
 
@@ -53,13 +78,15 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Empty Class")
     public void testFlompilerEmptyClass() {
-        testSuccess("/basic/EmptyClass.java");
+        testParsingSuccess("/basic/EmptyClass.java");
+        Object instance = getReflectionInstance("/basic", "EmptyClass");
+        Assertions.assertEquals(instance.getClass().getName(), "EmptyClass");
     }
 
     @Test
     @DisplayName("Flompiler: Defective Empty Class")
     public void testFlompilerDefectiveEmptyClass() {
-        testFailure("/basic/defective/DefectiveEmptyClass.java");
+        testParsingFailure("/basic/defective/DefectiveEmptyClass.java");
     }
 
 
@@ -69,13 +96,13 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Boolean Attribute Class")
     public void testFlompilerBooleanAttributeClass() {
-        testSuccess("/attributes/BooleanClass.java");
+        testParsingSuccess("/attributes/BooleanClass.java");
     }
 
     @Test
     @DisplayName("Flompiler: Defective Boolean Attribute Class")
     public void testFlompilerDefectiveBooleanAttributeClass() {
-        testFailure("/attributes/defective/DefectiveBooleanClass.java");
+        testParsingFailure("/attributes/defective/DefectiveBooleanClass.java");
     }
 
 
@@ -85,13 +112,13 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Boolean Method Class")
     public void testFlompilerBooleanMethodClass() {
-        testSuccess("/methods/parameterless/BooleanMethod.java");
+        testParsingSuccess("/methods/parameterless/BooleanMethod.java");
     }
 
     @Test
     @DisplayName("Flompiler: Defective Boolean Method Class")
     public void testFlompilerDefectiveBooleanMethodClass() {
-        testFailure("/methods/parameterless/defective/BooleanMethod.java");
+        testParsingFailure("/methods/parameterless/defective/BooleanMethod.java");
     }
 
 
@@ -101,25 +128,25 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Boolean Method Class with Boolean Parameter")
     public void testFlompilerBooleanMethodParametersClass() {
-        testSuccess("/methods/parameters/BooleanMethod.java");
+        testParsingSuccess("/methods/parameters/BooleanMethod.java");
     }
 
     @Test
     @DisplayName("Flompiler: Boolean Method Class with returned Boolean Parameter")
     public void testFlompilerBooleanMethodReturnedParametersClass() {
-        testSuccess("/methods/parameters/BooleanMethodReturn.java");
+        testParsingSuccess("/methods/parameters/BooleanMethodReturn.java");
     }
 
     @Test
     @DisplayName("Flompiler: Integer Method Class with increased Integer Parameter")
     public void testFlompilerIntegerMethodParametersClass() {
-        testSuccess("/methods/parameters/IntegerMethod.java");
+        testParsingSuccess("/methods/parameters/IntegerMethod.java");
     }
 
     @Test
     @DisplayName("Flompiler: Char Method Class with returned Char Parameter")
     public void testFlompilerCharMethodParametersClass() {
-        testSuccess("/methods/parameters/CharMethod.java");
+        testParsingSuccess("/methods/parameters/CharMethod.java");
     }
 
 
@@ -129,13 +156,13 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Static If Condition")
     public void testFlompilerStaticIf() {
-        testSuccess("/if_condition/StaticIf.java");
+        testParsingSuccess("/if_condition/StaticIf.java");
     }
 
     @Test
     @DisplayName("Flompiler: Static If-Else Condition")
     public void testFlompilerStaticIfElse() {
-        testSuccess("/if_condition/StaticIfElse.java");
+        testParsingSuccess("/if_condition/StaticIfElse.java");
     }
 
 
@@ -145,12 +172,12 @@ public class FlompilerTest {
     @Test
     @DisplayName("Flompiler: Dynamic If Condition")
     public void testFlompilerDynamicIf() {
-        testSuccess("/if_condition/DynamicIf.java");
+        testParsingSuccess("/if_condition/DynamicIf.java");
     }
 
     @Test
     @DisplayName("Flompiler: Dynamic If-Else Condition")
     public void testFlompilerDynamicIfElse() {
-        testSuccess("/if_condition/DynamicIfElse.java");
+        testParsingSuccess("/if_condition/DynamicIfElse.java");
     }
 }
